--- a/index.html
+++ b/index.html
@@ -24,10 +24,25 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P4FGX7B');</script>
+<!-- End Google Tag Manager -->
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P4FGX7B"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+<!-- /Analytics -->
+
+
   
   <section class="header13 cid-s9QCvo5OLi mbr-fullscreen" id="header13-0">
 
@@ -38,9 +53,9 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>&nbsp;</strong></h1>
-                <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2">&nbsp;</h2>
-                <p class="mbr-text mbr-fonts-style mb-3 display-7">&nbsp;</p>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>&nbsp;</strong><strong><br></strong></h1>
+                <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2">&nbsp;<br><br></h2>
+                <p class="mbr-text mbr-fonts-style mb-3 display-7">🍭Stake LP tokens to earn you sweet CANDY!🍬</p>
                 
                 <div class="social-row display-7 mt-5">
                     <div class="soc-item">
