--- a/test/presale.html
+++ b/test/presale.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
     <!---->
     
     <!---->
@@ -84,7 +84,7 @@
             <div class="media-container-row">
             
                 <div class="align-left aside-content"><center><br><br>TRX<br><span class="input">
-		<input type="text" name="ETH" align="center" value="1000" style="text-align: center;" size="7">
+		<input type="text" name="ETH" align="center" value="100" style="text-align: center;" size="7">
 		<span></span>	
                        </span> </center> <div class="mbr-section-btn pt-3 align-left"><a onclick="invest()" class="btn btn-secondary display-7">
               Get CANDY</a></div>
@@ -198,7 +198,6 @@ let MyContract = await tronWeb.contract().at(contractAddress);
     var tosend = parseFloat(document.getElementsByName('ETH')[0].value*1000000);
 
 if(tosend>=100000000){
-console.log(_refaddr);
 	
   let contractInstance = await tronWeb.contract().at(contractAddress);
 	
