--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>&nbsp;</strong><strong><br></strong></h1>
-                <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2">&nbsp;<br><br></h2>
-                <p class="mbr-text mbr-fonts-style mb-3 display-7">🍭Stake LP tokens to earn you sweet CANDY!🍬</p>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">&nbsp;</h1>
+                <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2"><br>&nbsp;</h2>
+                <p class="mbr-text mbr-fonts-style mb-3 display-7">🍭<strong>September 9th 2020 16:00 UTC</strong>🍬<br>Check time by your time zone <a href="https://www.timeanddate.com/countdown/launch?iso=20200909T16&p0=179&msg=CandySwap+Presale&font=sanserif&csz=1" class="text-primary" target="_blank"><em><strong>here</strong></em></a><br></p>
                 
                 <div class="social-row display-7 mt-5">
                     <div class="soc-item">
