--- a/test/presale.html
+++ b/test/presale.html
@@ -53,7 +53,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-secondary display-4" href="https://justswap.org/?lang=en-US#/scan/detail/trx/TEz1qbbCMKojtuMtweTq2PVSL5Lvk7ZKjE" target="_blank">Candy/Trx</a>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="https://mobirise.co">
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="presale.html">
                         
                         Farm</a></li>
                 <li class="nav-item">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
     <!---->
     
     <!---->
