--- a/test/about.html
+++ b/test/about.html
@@ -8,12 +8,12 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/about-meta.jpeg">
   <meta property="og:image" content="assets/images/about-meta.jpeg">
-  <meta name="twitter:title" content="About">
+  <meta name="twitter:title" content="🍭 About 🍬">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/pink-candy-hi.png" type="image/x-icon">
   <meta name="description" content="About CANDY">
   
-  <title>About</title>
+  <title>🍭 About 🍬</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="services2 cid-sa0qOHEcUu mbr-parallax-background" id="services2-4">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="services2 cid-sa0qOHEcUu mbr-parallax-background" id="services2-4">
     <!---->
     
     <!---->
@@ -90,12 +90,7 @@
 <br>Farming (?)
 <br><br><br>🍬&nbsp;<strong>Presale
 <br></strong><br>10,000 CANDY are going to be distributed via PreSale.
-<br><br>Tier 1: <em>1,000 CANDY at 100 TRX Each
-</em><br>Tier 2: <em>1,250 CANDY at 115 TRX Each
-</em><br>Tier 3: <em>1,750 CANDY at 125 TRX Each
-</em><br>Tier 4: <em>2,500 CANDY at 135 TRX Each
-</em><br>Tier 5: <em>3,500 CANDY at 150 TRX Each
-<br></em><br>Each tier will last for not more than 3 days (or earlier if sold out).
+<br><br>PreSale CANDY price:&nbsp;<em><strong>100 TRX Each CANDY</strong>&nbsp;</em><br><br>PreSale last for not more than 5 days (or earlier if sold out).
 <br><br>PreSale Funds (Trx) will be locked in JustSwap <strong>CANDY/TRX Liquidity Pool</strong>.
 <br><br><br>💸 <strong>JustSwap</strong><br><strong><br></strong>After presale ends, 10,000 of new minted CANDY will be injected in the JustSwap CANDY/TRX Pool, along with the Presale TRX funds (liquidity).
 <br><br><br>👨‍🌾&nbsp;<strong>Farming
