--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="https://justswap.org/?lang=en-US#/scan/detail/trx/TEz1qbbCMKojtuMtweTq2PVSL5Lvk7ZKjE" target="_blank">Candy/Trx</a>
+                    <a class="nav-link link text-secondary display-4" href="index.html">Candy/Trx</a>
                 </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html#services2-0">
                         
                         Farm</a></li>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
     <!---->
     
     <!---->
