--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
     <!---->
     
     <!---->
@@ -83,7 +83,7 @@
                <a href="https://www.tronlink.org/" target="_new"><em>Please unlock your Tron wallet to start interacting</em></a></p></div> 
             <div class="media-container-row">
             
-                <div class="align-left aside-content"><center><br><br>TRX<br><span class="input">
+                <div class="align-center aside-content"><center><br><br>TRX<br><span class="input">
 		<input type="text" name="ETH" align="center" value="100" style="text-align: center;" size="8">
 		<span></span>	
                        </span> </center> <div class="mbr-section-btn pt-3 align-left"><a onclick="invest()" class="btn btn-secondary display-7">
