--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="index.html">Candy/Trx</a>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html#services2-0">
+                    <a class="nav-link link text-secondary display-4" href="https://justswap.org/?lang=en-US#/scan/detail/trx/TEz1qbbCMKojtuMtweTq2PVSL5Lvk7ZKjE" target="_blank">Candy/Trx</a>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="farms.html">
                         
                         Farm</a></li>
                 <li class="nav-item">
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="services2 cid-sa0qOHEcUu mbr-parallax-background" id="services2-4">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="services2 cid-sa0qOHEcUu mbr-parallax-background" id="services2-4">
     <!---->
     
     <!---->
