--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/about-meta.jpeg">
   <meta name="twitter:title" content="🍭 About 🍬">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/favicon-128x131-1.png" type="image/x-icon">
   <meta name="description" content="About CANDY">
   
   <title>🍭 About 🍬</title>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="services2 cid-sa0qOHEcUu mbr-parallax-background" id="services2-4">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="services2 cid-sa0qOHEcUu mbr-parallax-background" id="services2-4">
     <!---->
     
     <!---->
