--- a/candytrx1.html
+++ b/candytrx1.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/candytrx1-meta.jpeg">
   <meta name="twitter:title" content="🍭 Candy/Trx LP 🍬">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/favicon-128x131-1.png" type="image/x-icon">
   <meta name="description" content="CandySwap.link Sweet Farming">
   
   <title>🍭 Candy/Trx LP 🍬</title>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
     <!---->
     
     <!---->
