--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/index-meta.jpeg">
   <meta name="twitter:title" content="🍭 CandySwap 🍬">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/pink-candy-hi.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/favicon-128x131-1.png" type="image/x-icon">
   <meta name="description" content="CandySwap.link Sweet Farming">
   
   <title>🍭 CandySwap 🍬</title>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="services2 cid-sa1wVYp7bK mbr-parallax-background" id="services2-7">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="services2 cid-sa1wVYp7bK mbr-parallax-background" id="services2-7">
     <!---->
     
     <!---->
