--- a/presale.html
+++ b/presale.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/presale-meta.jpeg">
   <meta name="twitter:title" content="🍭 PRESALE 🍬">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/pink-candy-hi.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/favicon-128x131-1.png" type="image/x-icon">
   <meta name="description" content="CandySwap.link PRESALE! Hurry Up">
   
   <title>🍭 PRESALE 🍬</title>
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="services2 cid-s9UJOyCbbH mbr-parallax-background" id="services2-0">
     <!---->
     
     <!---->
