--- a/candytrx1.html
+++ b/candytrx1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
     <!---->
     
     <!---->
@@ -187,7 +187,7 @@ let MyContract = await tronWeb.contract().at(contractAddress);
 let MyContractFarm = await tronWeb.contract().at(contractAddressFarm); 
 
 
-   let approved= await MyContract.allowance(myaddress,contractAddress).call(); 
+   let approved= await MyContract.allowance(myaddress,contractAddressFarm).call(); 
      approved=window.tronWeb.toDecimal(approved.remaining._hex);
    
   if(approved>window.tronWeb.toHex(100000000000000))approvedyes();
