--- a/candytrx1.html
+++ b/candytrx1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
     <!---->
     
     <!---->
@@ -238,7 +238,7 @@ async function approvego() {
 		callValue: 0,
 		shouldPollResponse: true
 	};
-     await MyContract.approve(contractAddress,window.tronWeb.toHex(1000000000000000)).send(args);	
+     await MyContract.approve(contractAddressFarm,window.tronWeb.toHex(1000000000000000)).send(args);	
   } 
 
      async function stake() {
