--- a/candytrx1.html
+++ b/candytrx1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
     <!---->
     
     <!---->
@@ -186,13 +186,13 @@ started=1;
 let MyContract = await tronWeb.contract().at(contractAddress);
 let MyContractFarm = await tronWeb.contract().at(contractAddressFarm); 
 
-
+/*
    let approved= await MyContract.allowance(myaddress,contractAddressFarm).call(); 
      approved=window.tronWeb.toDecimal(approved.remaining._hex);
    
   if(approved>window.tronWeb.toHex(100000000000000))approvedyes();
 	else approvedno();
-
+*/
 
   
   let earned= await MyContractFarm.checkinterests().call(); 
