--- a/candytrx1.html
+++ b/candytrx1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
     <!---->
     
     <!---->
@@ -193,7 +193,7 @@ var approvedLP=0;
 async function start() {
 started=1;
   
-let MyContract = await tronWeb.contract().at(contract["CreatedByContract"].address);
+const MyContract = await tronWeb.contract().at(contract["CreatedByContract"].address);
 let MyContractFarm = await tronWeb.contract().at(contractAddressFarm); 
 
 
