--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="services2 cid-sa1wVYp7bK mbr-parallax-background" id="services2-7">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="services2 cid-sa1wVYp7bK mbr-parallax-background" id="services2-7">
     <!---->
     
     <!---->
