--- a/candy1.html
+++ b/candy1.html
@@ -194,7 +194,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
 
 
    let approved= await MyContract.allowance(myaddress,contractAddressFarm).call(); 
-     approved=window.tronWeb.toDecimal(approved.remaining._hex);
+     approved=window.tronWeb.toDecimal(approved._hex);
    
   if(approved>window.tronWeb.toHex(100000000000000))approvedyes();
 	else approvedno();
