--- a/candy1.html
+++ b/candy1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
     <!---->
     
     <!---->
@@ -86,8 +86,8 @@
                 <div class="align-center aside-content">
                     <p class="mbr-text text2 pt-2 mbr-light mbr-fonts-style display-2"><span id="staked">-</span></p>
                      <p class="mbr-text text3 pt-2 mbr-light mbr-fonts-style display-4">Candy/Trx Staked</p>
-                    <div style="display:block;" class="mbr-section-btn pt-3 align-left"><a class="btn btn-black-outline display-4" onclick="approvego()">Approve&nbsp;Candy/Trx</a></div>
-                   <div style="display:none;" class="mbr-section-btn pt-3 align-left"><a class="btn btn-black-outline display-4" onclick="stake()">Stake</a></div>
+                  <div id="approvedno" style="display:block;">    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-black-outline display-4" onclick="approvego()">Approve&nbsp;Candy/Trx</a></div></div>
+                   <div id="approvedyes" style="display:none;"><div class="mbr-section-btn pt-3 align-left"><a class="btn btn-black-outline display-4" onclick="stake()">Stake</a></div></div>
                   
                  <br> <br> 
                </div>
