--- a/candy1.html
+++ b/candy1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
+<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
     <!---->
     
     <!---->
@@ -168,6 +168,9 @@ function round(num) {
 	return +(Math.floor(num + "e+0") + "e-0");
 }
   
+     function roundToSix(num) {
+	return +(Math.floor(num + "e+6") + "e-6");
+}
 
 
  
@@ -202,12 +205,12 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
 
   
   let earned= await MyContractFarm.checkinterests().call(); 
-    document.getElementById("earned").innerHTML=roundToFour(earned/1000000);
+    document.getElementById("earned").innerHTML=roundToSix(earned/1000000);
 
   
   
   let staked= await MyContractFarm.staked(myaddress).call(); 
-    document.getElementById("staked").innerHTML=roundToFour(staked/1000000);
+    document.getElementById("staked").innerHTML=roundToSix(staked/1000000);
 
   
    let checkcountdown= await MyContractFarm.countdown().call(); 
