--- a/candy1.html
+++ b/candy1.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="services2 cid-sa1WtQ1I9j mbr-parallax-background" id="services2-j">
     <!---->
     
     <!---->
@@ -211,7 +211,6 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   
   let staked= await MyContractFarm.staked(myaddress).call(); 
     document.getElementById("staked").innerHTML=roundToSix(staked/1000000);
-
   
    let checkcountdown= await MyContractFarm.countdown().call(); 
  var days = Math.floor(checkcountdown / (60 * 60 * 24));
