--- a/farms.html
+++ b/farms.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="services1 cid-sa1MZ4eO16 mbr-parallax-background" id="services1-d">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="services1 cid-sa1MZ4eO16 mbr-parallax-background" id="services1-d">
     <!---->
     
     <!---->
@@ -109,9 +109,9 @@
 <br>Earn CANDY 
 <br>
 <br>Ends in:
-<br>-:-:-:-<br></p>
+<br><span id="countdown2">-:-:-:-</span><br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-center"><a href="farms.html" class="btn btn-white-outline display-4">Coming Soon</a></div>
+                        <div class="mbr-section-btn align-center"><a href="candytrxLP1.html" class="btn btn-danger display-4">SELECT</a></div>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@ function round(num) {
   
 
 var contractAddress='TWQVtxyBxfkTx8fyW7XnMB4YQQQRzEcqtJ';
-
+var contractAddress2='THRaSjawS7RwpnVkVohvuGXzJqAcETtkmz';
 
 
   var toinvest=0;
@@ -193,7 +193,7 @@ async function start() {
 started=1;
   
 let MyContract = await tronWeb.contract().at(contractAddress);
- 
+let MyContract2 = await tronWeb.contract().at(contractAddress2); 
 
   
    
@@ -204,6 +204,12 @@ let MyContract = await tronWeb.contract().at(contractAddress);
 	var seconds = Math.floor((checkcountdown % (60)));
 				document.getElementById("countdown1").innerHTML = ('0' + days).slice(-2) + ":"+ ('0' + hours).slice(-2) + ":"+ ('0' + minutes).slice(-2) + ":"+ ('0' + seconds).slice(-2);
 
+  let checkcountdown2= await MyContract2.countdown().call(); 
+ var days2 = Math.floor(checkcountdown2 / (60 * 60 * 24));
+  var hours2 = Math.floor((checkcountdown2 % (60 * 60 * 24)) / (60 * 60));
+	var minutes2 = Math.floor((checkcountdown2 % (60 * 60)) / (60));
+	var seconds2 = Math.floor((checkcountdown2 % (60)));
+				document.getElementById("countdown2").innerHTML = ('0' + days2).slice(-2) + ":"+ ('0' + hours2).slice(-2) + ":"+ ('0' + minutes2).slice(-2) + ":"+ ('0' + seconds2).slice(-2);
 
  
 }
