--- a/about.html
+++ b/about.html
@@ -91,7 +91,9 @@
 <br></strong><br>10,000 CANDY are going to be distributed via PreSale.
 <br><br>PreSale CANDY price:&nbsp;<em><strong>100 TRX Each CANDY</strong>&nbsp;</em><br><br>PreSale last for not more than 5 days (or earlier if sold out).
 <br><br>PreSale Funds (Trx) will be locked in JustSwap <strong>CANDY/TRX Liquidity Pool</strong>.
-<br><br><br>💸 <strong>JustSwap</strong><br><strong><br></strong>After presale ends, 10,000 of new minted CANDY will be injected in the JustSwap CANDY/TRX Pool, along with the Presale TRX funds (liquidity).
+<br><br><br>💸 <strong>JustSwap</strong><br><strong><br></strong>
+After presale ends, 10,000 of new minted CANDY will be injected in the JustSwap CANDY/TRX Pool, along with the Presale TRX funds (liquidity).<br>
+            <a href="https://medium.com/@candyswap/candyswap-farm-how-to-use-justswap-734d2f35e94d" target="_blank">How to use JustSwap? How to get Candy/Trx LP Tokens?</a>         
 <br><br><br>👨‍🌾&nbsp;<strong>Farming
 <br></strong><br>One of the best way to get more and more CANDY is via Farming.
 <br>CANDY are farmed by staking specific Tokens (Farming Tokens). <br>Farming Tokens can be staked and unstaken at any time, no Tokens can be lost during the operations. 
