--- a/candy1.html
+++ b/candy1.html
@@ -86,7 +86,7 @@
                 <div class="align-center aside-content">
                     <p class="mbr-text text2 pt-2 mbr-light mbr-fonts-style display-2"><span id="staked">-</span></p>
                      <p class="mbr-text text3 pt-2 mbr-light mbr-fonts-style display-4">Candy Staked</p>
-                  <div id="approvedno" style="display:block;">    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-black-outline display-4" onclick="approvego()">Approve&nbsp;Candy/Trx</a></div></div>
+                  <div id="approvedno" style="display:block;">    <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-black-outline display-4" onclick="approvego()">Approve&nbsp;Candy</a></div></div>
                    <div id="approvedyes" style="display:none;"><div class="mbr-section-btn pt-3 align-left"><a class="btn btn-black-outline display-4" onclick="stake()">Stake</a></div></div>
                   
                  <br> <br> 
