--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -122,7 +122,7 @@
            <div class="media-container-row">
                 
         <div class="mbr-section-btn pt-3 align-left"><a class="btn btn-black-outline display-4" onclick="unstake()">Harvest &amp; Unstake</a></div>
-                </div> <p class="mbr-text text7 pt-2 mbr-light mbr-fonts-style display-4"><br>My Wallet: - LP
+                </div> <p class="mbr-text text7 pt-2 mbr-light mbr-fonts-style display-4"><br>My Wallet: <span id="mylpbalance">-</span> LP
 <br><a href="https://justswap.org/?lang=en-US#/home?tokenAddress=TEz1qbbCMKojtuMtweTq2PVSL5Lvk7ZKjE&type=add" target="_blank"><em>Get LP tokens</em></a><br></p><br> 
         </div>
     </div>
