--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -216,7 +216,7 @@ const getJSON = async url => {
 }
 
     var notch=0;
-   
+  var lpinwallet=0;
 async function start() {
 
 
@@ -256,7 +256,8 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   
     let LPmybalance= await MyContractFarm.LPmyBalance().call(); 
     document.getElementById("mylpbalance").innerHTML=roundToSix(LPmybalance/1000000);
-  	
+   lpinwallet=LPmybalance;
+  
   let dailyreward= await MyContractFarm.dailyreward().call(); 
   var weeklyreward= dailyreward*7;
   document.getElementById("candyweekly").innerHTML=roundToSix(weeklyreward/1000000);
@@ -368,7 +369,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
 		callValue: 0,
 		shouldPollResponse: true
 	};
-     await MyContractFarm.Stake().send(args);
+     await MyContractFarm.Stake(lpinwallet).send(args);
        fetchjson();
   } 
     
