--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -369,7 +369,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
 		callValue: 0,
 		shouldPollResponse: true
 	};
-     await MyContractFarm.Stake(lpinwallet).send(args);
+     await MyContractFarm.stake(lpinwallet).send(args);
        fetchjson();
   } 
     
