--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -270,7 +270,7 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   var weeklyroipercent=weeklyusdreward/(lppoolsupplyusd/100);
   var APY=weeklyroipercent*75;
   
-  console.log(APY+"  "+weeklyroipercent+"  "+weeklyusdreward+"  "+candyprice+"  "+weeklyreward+"  "+dailyreward+"  "+);
+  console.log(APY+"  "+weeklyroipercent+"  "+weeklyusdreward+"  "+candyprice+"  "+weeklyreward+"  "+dailyreward);
               
   document.getElementById("APY").innerHTML=roundToTwo(APY);
   
