--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -248,12 +248,13 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
    var lptotalsupply=lptotsup;
   
  var lpprice=exchangeliquidityusd/lptotalsupply;
-   document.getElementById("usdtotal").innerHTML=(lptotsup*lpprice);
+ 
   
    let poolLPbalance= await MyContractFarm.poolLPbalance().call(); 
    var lppoolsupply=poolLPbalance;
    document.getElementById("lptotal").innerHTML=roundToSix(lppoolsupply/1000000);
   var lppoolsupplyusd=poolLPbalance*lpprice;
+    document.getElementById("usdtotal").innerHTML=(lppoolsupplyusd);
   
     let LPmybalance= await MyContractFarm.LPmyBalance().call(); 
     document.getElementById("mylpbalance").innerHTML=roundToSix(LPmybalance/1000000);
