--- a/candytrx2.html
+++ b/candytrx2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="services2 cid-saWgcTjzL1 mbr-parallax-background" id="services2-p">
     <!---->
     
     <!---->
@@ -271,7 +271,8 @@ let MyContractFarm = await tronWeb.contract().at(contractAddressFarm);
   var weeklyroipercent=weeklyusdreward/(lppoolsupplyusd/100);
   var APY=weeklyroipercent*75;
   
-  console.log(APY+"  "+weeklyroipercent+"  "+weeklyusdreward+"  "+lppoolsupplyusd+"  "+weeklyreward+"  "+candyprice);
+  console.log(APY+"  "+weeklyroipercent+"  "+weeklyusdreward+"  "+lppoolsupplyusd+"  "+weeklyreward+"  "+
+              candyprice+"   "+ TokenToTrxInputPrice+"   "+trxprice);
               
   document.getElementById("APY").innerHTML=roundToTwo(APY);
   
