--- a/farms.html
+++ b/farms.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="services1 cid-sb2ueNWKWR mbr-parallax-background" id="services1-t">
+<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="services1 cid-sb2ueNWKWR mbr-parallax-background" id="services1-t">
     <!---->
     
     <!---->
@@ -105,10 +105,10 @@
                    
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">ICH / TRX LP</h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Deposit ICHTRX LP<br>Earn CANDY<br><br><strong><em>10000 </em></strong>Candy in 2 Weeks<br><br>Starts in
+                        <p class="mbr-text mbr-fonts-style display-4">Deposit ICHTRX LP<br>Earn CANDY<br><br><em><strong>10000 </strong>Candy in 2 Weeks</em><br><br>Starts in
                           <br><span id="countdown2">-:-:-:-</span><br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-center"><a href="farms.html" class="btn btn-danger display-4">SELECT</a></div>
+                        <div class="mbr-section-btn align-center"><a href="cherrytrx1.html" class="btn btn-danger display-4">SELECT</a></div>
                     </div>
                 </div>
             </div>
