--- a/farms.html
+++ b/farms.html
@@ -108,7 +108,7 @@
                         <p class="mbr-text mbr-fonts-style display-4">Deposit ICHTRX LP<br>Earn CANDY<br><br><em><strong>10000 </strong>Candy in 2 Weeks</em><br><br>Starts in
                           <br><span id="countdown2">-:-:-:-</span><br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-center"><a href="cherrytrx1.html" class="btn btn-danger display-4">SELECT</a></div>
+                        <div class="mbr-section-btn align-center"><a href="#" class="btn btn-danger display-4">Coming Soon</a></div>
                     </div>
                 </div>
             </div>
