--- a/farms.html
+++ b/farms.html
@@ -105,7 +105,7 @@
                    
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">ICH / TRX LP</h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Deposit ICHTRX LP<br>Earn CANDY<br><br><em><strong>10000 </strong>Candy in 2 Weeks</em><br><br>Starts in
+                        <p class="mbr-text mbr-fonts-style display-4">Deposit ICHTRX LP<br>Earn CANDY<br><br><em>Coming Soon</em><br><br>Starts in
                           <br><span id="countdown2">-:-:-:-</span><br></p>
                         <!--Btn-->
                         <div class="mbr-section-btn align-center"><a href="#" class="btn btn-danger display-4">Coming Soon</a></div>
@@ -208,7 +208,7 @@ let MyContractFarm2 = await tronWeb.contract().at(contractAddress2);
   var hours2 = Math.floor((checkcountdown2 % (60 * 60 * 24)) / (60 * 60));
 	var minutes2 = Math.floor((checkcountdown2 % (60 * 60)) / (60));
 	var seconds2 = Math.floor((checkcountdown2 % (60)));
-				document.getElementById("countdown2").innerHTML = ('0' + days2).slice(-2) + ":"+ ('0' + hours2).slice(-2) + ":"+ ('0' + minutes2).slice(-2) + ":"+ ('0' + seconds2).slice(-2);
+				//document.getElementById("countdown2").innerHTML = ('0' + days2).slice(-2) + ":"+ ('0' + hours2).slice(-2) + ":"+ ('0' + minutes2).slice(-2) + ":"+ ('0' + seconds2).slice(-2);
   
 }
     
