--- a/candytrx2.html
+++ b/candytrx2.html
@@ -80,7 +80,7 @@
           
            <h2 class="mbr-title pt-2 mbr-fonts-style display-5">CANDY/TRX LP FARM</h2>
             <div id="installmetamask" style="color:Red; display:block;">  <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">
-               <a href="https://www.tronlink.org/" target="_new"><em>Please unlock your Tron wallet to start interacting</em></a></p></div> <br>  <p class="mbr-text text4 pt-2 mbr-light mbr-fonts-style display-4">Deposit CANDY/TRX LP and earn CANDY<br><br><em>Ends in: <span id="countdown">-:-:-:-</span></em><br><em><br></em><br></p>
+               <a href="https://www.tronlink.org/" target="_new"><em>Please unlock your Tron wallet to start interacting</em></a></p></div> <br>  <p class="mbr-text text4 pt-2 mbr-light mbr-fonts-style display-4">Stake CANDY/TRX LP and earn CANDY<br><br><em>Ends in: <span id="countdown">-:-:-:-</span></em><br><em><br></em><br></p>
            <div class="media-container-row">
            
                 <div class="align-center aside-content">
