--- a/farms.html
+++ b/farms.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="services1 cid-sb2ueNWKWR mbr-parallax-background" id="services1-t">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="services1 cid-sb2ueNWKWR mbr-parallax-background" id="services1-t">
     <!---->
     
     <!---->
@@ -105,11 +105,7 @@
                    
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">ICH / TRX LP</h4>
-<<<<<<< Updated upstream
-                        <p class="mbr-text mbr-fonts-style display-4">Stake ICHTRX LP<br>Earn CANDY<br><br><em><strong>4500 </strong>Candy in 1 Week</em><br><br>Ends in
-=======
                         <p class="mbr-text mbr-fonts-style display-4">Stake ICHTRX LP<br>Earn CANDY<br><br><em><strong>4500 </strong>Candy<br>in 1 Week</em><br><br>Ends in
->>>>>>> Stashed changes
                           <br><span id="countdown2">-:-:-:-</span><br></p>
                         <!--Btn-->
                         <div class="mbr-section-btn align-center"><a href="cherrytrx1.html" class="btn btn-danger display-4">SELECT</a></div>
